--- a/_posts/2019-08-18-NIO.md
+++ b/_posts/2019-08-18-NIO.md
@@ -24,6 +24,8 @@ public abstract class Buffer {
 }
 ```
 
+在NIO中，所有数据的处理都是用缓冲区来进行的。
+
 缓冲区是对一个对象内的基本数据类型的数组包装，它和数组的区别是 它把数据的数据内容和信息包含在一个单一的对象中。
 
 缓冲区管理固定数目的数据元素，但是在任何特定的时候，我们可能对缓冲区的一部分数据感兴趣。
@@ -156,6 +158,11 @@ Java NIO 有以下Buffer类型
 
 ##### Channel
 Channel用于在字节缓冲区和位于通道另一侧的实体（通常是一个文件或套接字）之间有效地传输数据。
+
+Channel是一个通道，网络数据通过Channel读取和写入。通道和流的不同之处在于通道是双向的，流只能在一个方向移动（一个流必须是InputStream和OutputStream
+的子类），而通道可以用于读，写或者二者同时进行。
+
+Channel大致可以分为2大类：用于网络读写的SelectableChannel和用于文件操作的FileChannel。
 
 多数情况下，通道与操作系统的文件描述符（File Descriptor）和文件句柄（File Handle）有着一对一的关系。
 虽然通道比文件描述符更广义，但您将经常使用到的多数通道都是连接到开放的文件描述符的。
@@ -350,6 +357,8 @@ Pipes的另一个有用之处是可以用来辅助测试。一个单元测试框
 选择器类管理着一个被注册的通道集合的信息和它们的就绪状态。通道是和选择器一起被注册的，并且使用选择器来更新通道的就绪状态。
 当这么做的时候，可以选择将被激发的线程挂起，直到有就绪的的通道。
 
+Selector会不断的轮询多个channel,如果某个channel上发生了读或者写的事件，这个Channel就处于就绪状态，会被Selector轮询出来。
+
 **可选择通道(SelectableChannel)**
 FileChannel对象不是可选择的，因为它们没有继承SelectableChannel。所有socket通道都是可选择的，包括从管道(Pipe)对象的中获得的通道。
 SelectableChannel可以被注册到Selector对象上，同时可以指定对那个选择器而言，那种操作是感兴趣的。
@@ -470,3 +479,13 @@ key.attach (myObject);
 ```
 
 https://www.jianshu.com/p/7b507069debb
+
+##### NIO 2.0
+ NIO 2.0引入了新的异步通道概念，提供异步文件通道和异步套接字通道，异步通过提供2中方式来获取操作结果。
+
+
+
+JDK1.4提供的NIO框架，称为异步非阻塞I/O,但是严格按照UNIX网络编程来说，只能称为非阻塞I/O,早期版本的selector基于select/poll模型实现，
+之后对其做了性能上的优化，用epoll代替select/poll，上层API没有改变。NIO 2.0引入了新的异步通道，它是真正的异步I/O。
+
+
