--- a/_posts/2019-10-17-spring事务.md
+++ b/_posts/2019-10-17-spring事务.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "类加载"
+title:  "类加载及Spring 事务"
 date:   2019-10-17 15:13:34
 author: zhangtejun
 categories: Java
@@ -756,3 +756,372 @@ public void afterPropertiesSet() {
 		this.proxy = proxyFactory.getProxy(this.proxyClassLoader);
 	}
 ```
+
+
+#### 事务的创建
+TransactionAspectSupport的createTransactionIfNecessary()方法作为事务创建的入口，在该方法调用中。会向AbstractPlatformTransactionManager
+执行getTransaction(),这个是获取Transaction事务对象的过程，在AbstractPlatformTransactionManager实现中 需要对事务的情况做出不同的处理，然后创建
+一个TransactionStatus,并将其设置到TransactionInfo中去，同时将TransactionInfo和当前线程绑定，从而完成事务的创建。
+
+TransactionStatus封装了底层事务对象的创建，事务创建的结果是生成一个TransactionStatus对象，其是TransactionInfo的一个属性，TransactionInfo会保存在ThreadLocal
+对象中。
+
+* 新事务创建：首先吧创建的任务交给具体的事务处理器来完成，比如DataSourceTransactionManager，把创建d的事务对象在TransactionInfo中保存下来，然后把
+其他的事务属性，和线程ThreadLocal变量进行绑定。
+
+* 创建当前事务时，线程中已存在事务，当线程调用事务方法时，会考虑事务的创建处理，会涉及对现有事务的处理包括事务的传播特性。
+```java
+private TransactionStatus handleExistingTransaction(TransactionDefinition definition, Object transaction, boolean debugEnabled)
+			throws TransactionException {
+    //1. 如果当前线程已有事务存在，并且当前事务的传播特性是never,那么抛出异常。
+    //   说明这种情况是有问题的，Spring无法处理当前事务的创建。
+    //   即这个属性如果在调用者上，则直接以非事务运行。如果作用在被调用者上，则看调用者是否有事务，
+    //   如果调用者有事务，则抛出异常，如果没有事务，则以非事务运行。
+		if (definition.getPropagationBehavior() == TransactionDefinition.PROPAGATION_NEVER) {
+			throw new IllegalTransactionStateException(
+					"Existing transaction found for transaction marked with propagation 'never'");
+		}
+    // 2. 如果当前事务的配置属性是PROPAGATION_NOT_SUPPORTED，同时当前线程已经存在事务，那么将事务挂起。
+    //    即如果当前存在事务，就把当前事务挂起，然后以非事务方式执行操作（挂起后的操作出现异常不回滚，在挂起点前的操作仍然可以回滚）。
+		if (definition.getPropagationBehavior() == TransactionDefinition.PROPAGATION_NOT_SUPPORTED) {
+			if (debugEnabled) {
+				logger.debug("Suspending current transaction");
+			}
+			Object suspendedResources = suspend(transaction);
+			boolean newSynchronization = (getTransactionSynchronization() == SYNCHRONIZATION_ALWAYS);
+			// 这里的参数transaction是null，newTransaction是false，意味着方法不需要在事务环境下运行，
+			// 同时挂起的事务的信息j记录y也保存在TransactionStatus中，包括对ThreadLoLocal对事务的记录。
+			return prepareTransactionStatus(
+					definition, null, false, newSynchronization, debugEnabled, suspendedResources);
+		}
+    // 3. 如果当前事务的配置是PROPAGATION_REQUIRES_NEW，创建新事务，同时把当前线程中的事务挂起
+    //    不管调用者是否存在事务，被调用者都会新开一个事务，相当于被调用者始终存在于自己的事务，该事务和调用者是否有事务并没有关系。
+    //    换句话说，它们是不同的事务，相互不会影响。
+		if (definition.getPropagationBehavior() == TransactionDefinition.PROPAGATION_REQUIRES_NEW) {
+			if (debugEnabled) {
+				logger.debug("Suspending current transaction, creating new transaction with name [" +
+						definition.getName() + "]");
+			}
+			SuspendedResourcesHolder suspendedResources = suspend(transaction);
+			try {
+				boolean newSynchronization = (getTransactionSynchronization() != SYNCHRONIZATION_NEVER);
+				DefaultTransactionStatus status = newTransactionStatus(
+						definition, transaction, true, newSynchronization, debugEnabled, suspendedResources);
+				doBegin(transaction, definition);
+				prepareSynchronization(status, definition);
+				return status;
+			}
+			catch (RuntimeException | Error beginEx) {
+				resumeAfterBeginException(transaction, suspendedResources, beginEx);
+				throw beginEx;
+			}
+		}
+    // 4. 嵌套事务的创建，如果当前存在事务，则在嵌套事务内执行。如果当前没有事务，则执行与PROPAGATION_REQUIRED类似的操作。
+		if (definition.getPropagationBehavior() == TransactionDefinition.PROPAGATION_NESTED) {
+			if (!isNestedTransactionAllowed()) {
+				throw new NestedTransactionNotSupportedException(
+						"Transaction manager does not allow nested transactions by default - " +
+						"specify 'nestedTransactionAllowed' property with value 'true'");
+			}
+			if (debugEnabled) {
+				logger.debug("Creating nested transaction with name [" + definition.getName() + "]");
+			}
+			if (useSavepointForNestedTransaction()) {
+				// Create savepoint within existing Spring-managed transaction,
+				// through the SavepointManager API implemented by TransactionStatus.
+				// Usually uses JDBC 3.0 savepoints. Never activates Spring synchronization.
+				// 在Spring事务管理中，创建事务保存点
+				DefaultTransactionStatus status = prepareTransactionStatus(definition, transaction, false, false, debugEnabled, null);
+				status.createAndHoldSavepoint();
+				return status;
+			}
+			else {
+				// Nested transaction through nested begin and commit/rollback calls.
+				// Usually only for JTA: Spring synchronization might get activated here
+				// in case of a pre-existing JTA transaction.
+				boolean newSynchronization = (getTransactionSynchronization() != SYNCHRONIZATION_NEVER);
+				DefaultTransactionStatus status = newTransactionStatus(
+						definition, transaction, true, newSynchronization, debugEnabled, null);
+				doBegin(transaction, definition);
+				prepareSynchronization(status, definition);
+				return status;
+			}
+		}
+
+		// Assumably PROPAGATION_SUPPORTS or PROPAGATION_REQUIRED.
+		if (debugEnabled) {
+			logger.debug("Participating in existing transaction");
+		}
+		if (isValidateExistingTransaction()) {
+			if (definition.getIsolationLevel() != TransactionDefinition.ISOLATION_DEFAULT) {
+				Integer currentIsolationLevel = TransactionSynchronizationManager.getCurrentTransactionIsolationLevel();
+				if (currentIsolationLevel == null || currentIsolationLevel != definition.getIsolationLevel()) {
+					Constants isoConstants = DefaultTransactionDefinition.constants;
+					throw new IllegalTransactionStateException("Participating transaction with definition [" +
+							definition + "] specifies isolation level which is incompatible with existing transaction: " +
+							(currentIsolationLevel != null ?
+									isoConstants.toCode(currentIsolationLevel, DefaultTransactionDefinition.PREFIX_ISOLATION) :
+									"(unknown)"));
+				}
+			}
+			if (!definition.isReadOnly()) {
+				if (TransactionSynchronizationManager.isCurrentTransactionReadOnly()) {
+					throw new IllegalTransactionStateException("Participating transaction with definition [" +
+							definition + "] is not marked as read-only but existing transaction is");
+				}
+			}
+		}
+		boolean newSynchronization = (getTransactionSynchronization() != SYNCHRONIZATION_NEVER);
+		return prepareTransactionStatus(definition, transaction, false, newSynchronization, debugEnabled, null);
+	}
+```
+#### 事务挂起
+事务的挂起涉及线程和事务信息的保存，
+```java
+protected final SuspendedResourcesHolder suspend(@Nullable Object transaction) throws TransactionException {
+		if (TransactionSynchronizationManager.isSynchronizationActive()) {
+			List<TransactionSynchronization> suspendedSynchronizations = doSuspendSynchronization();
+			try {
+				Object suspendedResources = null;
+				// 1. 把挂起的事务交给具体的事务管理器去完成，如果具体的事务处理器不支持事务挂起，则抛出异常
+				if (transaction != null) {
+					suspendedResources = doSuspend(transaction);
+				}
+				// 这里在线程中保存和事务处理相关的信息，重置线程中相关的ThreadLocal变量
+				String name = TransactionSynchronizationManager.getCurrentTransactionName();
+				TransactionSynchronizationManager.setCurrentTransactionName(null);
+				boolean readOnly = TransactionSynchronizationManager.isCurrentTransactionReadOnly();
+				TransactionSynchronizationManager.setCurrentTransactionReadOnly(false);
+				Integer isolationLevel = TransactionSynchronizationManager.getCurrentTransactionIsolationLevel();
+				TransactionSynchronizationManager.setCurrentTransactionIsolationLevel(null);
+				boolean wasActive = TransactionSynchronizationManager.isActualTransactionActive();
+				TransactionSynchronizationManager.setActualTransactionActive(false);
+				return new SuspendedResourcesHolder(
+						suspendedResources, suspendedSynchronizations, name, readOnly, isolationLevel, wasActive);
+			}
+			catch (RuntimeException | Error ex) {
+				// doSuspend failed - original transaction is still active...
+				// doSuspend 失败，初始的事务仍然存在
+				doResumeSynchronization(suspendedSynchronizations);
+				throw ex;
+			}
+		}
+		else if (transaction != null) {
+			// Transaction active but no synchronization active.
+			Object suspendedResources = doSuspend(transaction);
+			return new SuspendedResourcesHolder(suspendedResources);
+		}
+		else {
+			// Neither transaction nor synchronization active.
+			return null;
+		}
+	}
+```
+
+#### 事务提交
+```
+TransactionInfo txInfo = createTransactionIfNecessary(tm, txAttr, joinpointIdentification);
+commitTransactionAfterReturning(txInfo);
+
+// 直接调用事务管理器完成提交
+protected void commitTransactionAfterReturning(@Nullable TransactionInfo txInfo) {
+		if (txInfo != null && txInfo.getTransactionStatus() != null) {
+			if (logger.isTraceEnabled()) {
+				logger.trace("Completing transaction for [" + txInfo.getJoinpointIdentification() + "]");
+			}
+			txInfo.getTransactionManager().commit(txInfo.getTransactionStatus());
+		}
+	}
+
+// 提交方法类似getTransaction
+public final void commit(TransactionStatus status) throws TransactionException {
+    // TransactionStatus中的事务标识是否已完成
+		if (status.isCompleted()) {
+			throw new IllegalTransactionStateException(
+					"Transaction is already completed - do not call commit or rollback more than once per transaction");
+		}
+    // 如果事务处理过程中出现异常，调用回滚
+		DefaultTransactionStatus defStatus = (DefaultTransactionStatus) status;
+		if (defStatus.isLocalRollbackOnly()) {
+			if (defStatus.isDebug()) {
+				logger.debug("Transactional code has requested rollback");
+			}
+			// 回滚处理
+			processRollback(defStatus, false);
+			return;
+		}
+
+		if (!shouldCommitOnGlobalRollbackOnly() && defStatus.isGlobalRollbackOnly()) {
+			if (defStatus.isDebug()) {
+				logger.debug("Global transaction is marked as rollback-only but transactional code requested commit");
+			}
+			processRollback(defStatus, true);
+			return;
+		}
+    // 提交事务处理
+		processCommit(defStatus);
+	}
+
+private void processCommit(DefaultTransactionStatus status) throws TransactionException {
+		try {
+			boolean beforeCompletionInvoked = false;
+
+			try {
+			  // 事务提交前的准备，由具体的事务管理器来完成
+				boolean unexpectedRollback = false;
+				prepareForCommit(status);
+				triggerBeforeCommit(status);
+				triggerBeforeCompletion(status);
+				beforeCompletionInvoked = true;
+        // 嵌套事务处理
+				if (status.hasSavepoint()) {
+					if (status.isDebug()) {
+						logger.debug("Releasing transaction savepoint");
+					}
+					unexpectedRollback = status.isGlobalRollbackOnly();
+					status.releaseHeldSavepoint();
+				}
+				// 根据当前线程事务状态进行处理，如果当前事务是一个新事务，则调用具体的事务处理器完成提交，
+				// 如果当前线程持有的事务不是一个新事务，则不提交，由已经存在的事务来完成提交。
+				else if (status.isNewTransaction()) {
+					if (status.isDebug()) {
+						logger.debug("Initiating transaction commit");
+					}
+					unexpectedRollback = status.isGlobalRollbackOnly();
+					doCommit(status);
+				}
+				else if (isFailEarlyOnGlobalRollbackOnly()) {
+					unexpectedRollback = status.isGlobalRollbackOnly();
+				}
+
+				// Throw UnexpectedRollbackException if we have a global rollback-only
+				// marker but still didn't get a corresponding exception from commit.
+				if (unexpectedRollback) {
+					throw new UnexpectedRollbackException(
+							"Transaction silently rolled back because it has been marked as rollback-only");
+				}
+			}
+			catch (UnexpectedRollbackException ex) {
+				// can only be caused by doCommit
+				triggerAfterCompletion(status, TransactionSynchronization.STATUS_ROLLED_BACK);
+				throw ex;
+			}
+			catch (TransactionException ex) {
+				// can only be caused by doCommit
+				if (isRollbackOnCommitFailure()) {
+					doRollbackOnCommitException(status, ex);
+				}
+				else {
+					triggerAfterCompletion(status, TransactionSynchronization.STATUS_UNKNOWN);
+				}
+				throw ex;
+			}
+			catch (RuntimeException | Error ex) {
+				if (!beforeCompletionInvoked) {
+					triggerBeforeCompletion(status);
+				}
+				doRollbackOnCommitException(status, ex);
+				throw ex;
+			}
+
+			// Trigger afterCommit callbacks, with an exception thrown there
+			// propagated to callers but the transaction still considered as committed.
+			try {
+				triggerAfterCommit(status);
+			}
+			finally {
+				triggerAfterCompletion(status, TransactionSynchronization.STATUS_COMMITTED);
+			}
+
+		}
+		finally {
+			cleanupAfterCompletion(status);
+		}
+	}
+```
+
+
+#### 事务回滚
+```
+public final void rollback(TransactionStatus status) throws TransactionException {
+		if (status.isCompleted()) {
+			throw new IllegalTransactionStateException(
+					"Transaction is already completed - do not call commit or rollback more than once per transaction");
+		}
+
+		DefaultTransactionStatus defStatus = (DefaultTransactionStatus) status;
+		processRollback(defStatus, false);
+	}
+
+private void processRollback(DefaultTransactionStatus status, boolean unexpected) {
+		try {
+			boolean unexpectedRollback = unexpected;
+
+			try {
+				triggerBeforeCompletion(status);
+        // 嵌套事务回滚
+				if (status.hasSavepoint()) {
+					if (status.isDebug()) {
+						logger.debug("Rolling back transaction to savepoint");
+					}
+					status.rollbackToHeldSavepoint();
+				}
+				// 当前调用方法中新建事务回滚
+				else if (status.isNewTransaction()) {
+					if (status.isDebug()) {
+						logger.debug("Initiating transaction rollback");
+					}
+					doRollback(status);
+				}
+				else {
+					// Participating in larger transaction
+					if (status.hasTransaction()) {
+						if (status.isLocalRollbackOnly() || isGlobalRollbackOnParticipationFailure()) {
+							if (status.isDebug()) {
+								logger.debug("Participating transaction failed - marking existing transaction as rollback-only");
+							}
+							doSetRollbackOnly(status);
+						}
+						else {
+							if (status.isDebug()) {
+								logger.debug("Participating transaction failed - letting transaction originator decide on rollback");
+							}
+						}
+					}
+					else {
+						logger.debug("Should roll back transaction but cannot - no transaction available");
+					}
+					// Unexpected rollback only matters here if we're asked to fail early
+					if (!isFailEarlyOnGlobalRollbackOnly()) {
+						unexpectedRollback = false;
+					}
+				}
+			}
+			catch (RuntimeException | Error ex) {
+				triggerAfterCompletion(status, TransactionSynchronization.STATUS_UNKNOWN);
+				throw ex;
+			}
+
+			triggerAfterCompletion(status, TransactionSynchronization.STATUS_ROLLED_BACK);
+
+			// Raise UnexpectedRollbackException if we had a global rollback-only marker
+			if (unexpectedRollback) {
+				throw new UnexpectedRollbackException(
+						"Transaction rolled back because it has been marked as rollback-only");
+			}
+		}
+		finally {
+			cleanupAfterCompletion(status);
+		}
+	}
+```
+
+#### spring 中事务管理器的设计和实现
+Spring的事务处理分2部分完成，通用的事务处理框架在AbstractPlatformTransactionManager中完成，而事务接口和数据源实现的接口大多由具体的事务处理器来完成
+它们都是作为AbstractPlatformTransactionManager子类来使用的。
+
+DataSourceTransactionManager在事务开始的时候会调用doBegin()方法,首先的到Connection，如何根据事务的需要，设置Connection属性（比如设置自动提交为false）
+最后通过TransactionSynchronizationManager来进行资源绑定。
+
+DataSourceTransactionManager实现事务的创建，提交，回滚和单独使用Connection实现事务处理基本一致。
+
