--- a/_posts/2019-04-19-docker.md
+++ b/_posts/2019-04-19-docker.md
@@ -195,12 +195,19 @@ docker run --name web3 -d -p 82:82 -v  $PWD/nginx.conf:/etc/nginx/nginx.conf ngi
 docker run -it --network my-net busybox sh  --name web3 -d -p 82:82 -v  $PWD/nginx.conf:/etc/nginx/nginx.conf nginx 
                                                                        
        docker run -i -t --network my-net --rm nginx /bin/bash                                                                
-                                                                       
+
+imp standdb/standdb@xe file=/mnt/newdisk/oracle/db10g_standdbppos_20190919.dmp  fromuser=standdbppos touser=standdb buffer=40960000 log=yyy.log
+
     bY2*rerpkm  
                                                                          
    mvn clean package docker:build -Dmaven.test.skip=true
    docker run -p 3306:3306 --name mymysql  -v $PWD/logs:/logs -v $PWD/data:/var/lib/mysql -e MYSQL_ROOT_PASSWORD=123456 -d mysql:5.7
-   
+
+   sudo docker run  --name oracle -p 1521:1521  -v /mnt/newdisk/oracle:/mnt/newdisk/oracle oracleinanutshell/oracle-xe-11g
+
+
+docker exec -it oracle bash
+
    docker run --name mymysql  -v $PWD/logs:/logs -v $PWD/data:/var/lib/mysql -e MYSQL_ROOT_PASSWORD=123456 -d mysql:5.7
    
    docker run -p 81:81 --name springboot  --link mymysql:db  -d springboot/demo 
