--- a/_posts/2019-04-19-docker.md
+++ b/_posts/2019-04-19-docker.md
@@ -225,3 +225,229 @@ docker exec -it oracle bash
    
    
    docker run -p 9999:9999 --name springboot  --link mymysql:db  -d springboot/demo 
+
+
+##### oracle_11g 安装
+下载镜像
+1. docker pull registry.cn-hangzhou.aliyuncs.com/helowin/oracle_11g
+
+4.
+mkdir -p /mnt/newdisk/oracle
+chmod -R 777 /opt/oracle/
+
+启动镜像
+# 2. docker run -d --name oracle  -p 1521:1521 --privileged=true -v /mnt/hgfs/hs/oracle:/mnt/newdisk/oracle registry.cn-hangzhou.aliyuncs.com/helowin/oracle_11g
+
+# 2. docker run -d --name oracle  -p 1521:1521 --privileged=true -v /data/opt/oracle:/data/oracle registry.cn-hangzhou.aliyuncs.com/helowin/oracle_11g
+
+
+进入容器
+3. docker exec -it oracle /bin/bash
+数据从容器内映射到宿主机上
+
+分区（sudo gparted）
+
+登录sqlplus
+sqlplus / as sysdba
+
+修改默认用户密码
+alter user system identified by system;
+alter user sys identified by sys;
+#密码永不过期
+ALTER PROFILE DEFAULT LIMIT PASSWORD_LIFE_TIME UNLIMITED;
+
+select name from  V$database;
+
+
+修改容器的oracle服务字符集
+docker exec -it name /bin/bash
+export ORACLE_SID=orcl
+sqlplus / as sysdba
+shutdown immediate;
+startup mount
+ALTER SYSTEM ENABLE RESTRICTED SESSION;
+ALTER SYSTEM SET JOB_QUEUE_PROCESSES=0;
+ALTER SYSTEM SET AQ_TM_PROCESSES=0;
+alter database open;
+ALTER DATABASE character set INTERNAL_USE ZHS16GBK;
+shutdown immediate;
+startup
+select userenv('language') from dual;
+
+
+drop user PPOS cascade;
+
+select t.*,rowid from tsysparameter t where c_item='DirectSaleNo' t  -- 直销编码
+
+select t.*,rowid from tsysparameter t where c_item='GFPdfSealUrl' -- 盖章url http://10.128.10.203:8081/APWebPF/PFXSealServlet
+
+imp ppos/ppos@helowin file=db10g_standdbppos_20190919.dmp  fromuser=standdbppos touser=ppos buffer=40960000 log=yyy.log
+
+imp ppos/ppos@helowin file=part1.dmp  fromuser=gfppos touser=ppos buffer=40960000 log=1.log
+
+select t.*,rowid from tsysparameter t where c_item='DirectSaleNo'; -- 直销编码
+select t.*,rowid from hsi_user t order by l_userid asc;
+
+update hsi_user set c_password = 'BBD7AB39283419F560B1205573C8747C'
+
+select C_CLASS, C_FUNCTIONNO,C_ISLIMIT ,C_JAVACLASS ,C_JAVAMETHOD ,C_RIGHTCODE ,C_RIGHTNAME ,C_TABLENAME  ,C_UCTYPE  ,C_TXMANAGER  from HSI_RIGHT a where a.c_isuse='1' order by a.c_functionno
+
+select a.* from HSI_RIGHT a where a.c_isuse='1' order by a.c_functionno
+
+
+select * from TSVCSQL  where c_functionno = 'UC_SYSTEM_QUERYSECURITYCONFIG';
+
+
+
+DELETE HSI_RIGHT where c_functionno='UC_SYSTEM_QUERYSECURITYCONFIG';
+insert into HSI_RIGHT(C_RIGHTCODE,C_RIGHTNAME,C_CLASS,C_SYSNAME,C_FUNCTIONNO,C_JAVACLASS,C_JAVAMETHOD,C_CLIENTPROGS,C_TABLENAME,C_UCTYPE,C_ISLIMIT,C_ISUSE,C_TXMANAGER)
+values('2013441','查询安全配置信息','2','FUNDCRM','UC_SYSTEM_QUERYSECURITYCONFIG','com.hundsun.fund.crm.app.pub.bo.CommonQueryBO','execute','','','1','0','1','');
+
+DELETE HSI_MENURIGHT where c_rightcode in (select a.c_rightcode from hsi_right a where a.c_functionno='UC_SYSTEM_QUERYSECURITYCONFIG');
+
+
+DELETE HSI_TRANSRIGHT where c_rightcode in (select a.c_rightcode from hsi_right a where a.c_functionno='UC_SYSTEM_QUERYSECURITYCONFIG');
+
+
+DELETE TSVCSQL where c_functionno='UC_SYSTEM_QUERYSECURITYCONFIG';
+insert into TSVCSQL(C_FUNCTIONNO,C_SQLSTATEMENT,C_ORDERBY,C_SQLTYPE,C_DATASOURCE,C_BUSINFLAG)
+values('UC_SYSTEM_QUERYSECURITYCONFIG','select * from hsi_securityconfig a where a.c_isuse=''1''','','0','','DEFAULT');
+
+DELETE TSVCINTERFACE where c_functionno='UC_SYSTEM_QUERYSECURITYCONFIG' and c_flag='0';
+
+
+DELETE TSVCINTERFACE where c_functionno='UC_SYSTEM_QUERYSECURITYCONFIG' and c_flag='1';
+insert into TSVCINTERFACE(C_FUNCTIONNO,C_FLAG,C_PACKFLAG,C_FIELDNAME,C_EXPLAIN,C_PROPERTY,L_LEN,L_DECLEN,C_FIELDTYPE,C_FIELDFLAG,C_NOTNULL,C_CONDITION,C_EXISTVALUE,C_VIEWLEVEL,C_VIEWTYPE,C_DICNAME,C_ISDEFAULT,C_VALUE,C_MIDSEARCHNAME,L_NO,C_NOTSHOWALLITEM,C_BUSINFLAG,C_ISUSE)
+values('UC_SYSTEM_QUERYSECURITYCONFIG','1','0','C_ISUSE','是否启用','isuse',1,0,'S','0','0','','','','','','','','',null,'','DEFAULT','1');
+insert into TSVCINTERFACE(C_FUNCTIONNO,C_FLAG,C_PACKFLAG,C_FIELDNAME,C_EXPLAIN,C_PROPERTY,L_LEN,L_DECLEN,C_FIELDTYPE,C_FIELDFLAG,C_NOTNULL,C_CONDITION,C_EXISTVALUE,C_VIEWLEVEL,C_VIEWTYPE,C_DICNAME,C_ISDEFAULT,C_VALUE,C_MIDSEARCHNAME,L_NO,C_NOTSHOWALLITEM,C_BUSINFLAG,C_ISUSE)
+values('UC_SYSTEM_QUERYSECURITYCONFIG','1','0','C_MATCHTYPE','匹配方式','matchtype',5,0,'S','0','0','','','','','','','','',null,'','DEFAULT','1');
+insert into TSVCINTERFACE(C_FUNCTIONNO,C_FLAG,C_PACKFLAG,C_FIELDNAME,C_EXPLAIN,C_PROPERTY,L_LEN,L_DECLEN,C_FIELDTYPE,C_FIELDFLAG,C_NOTNULL,C_CONDITION,C_EXISTVALUE,C_VIEWLEVEL,C_VIEWTYPE,C_DICNAME,C_ISDEFAULT,C_VALUE,C_MIDSEARCHNAME,L_NO,C_NOTSHOWALLITEM,C_BUSINFLAG,C_ISUSE)
+values('UC_SYSTEM_QUERYSECURITYCONFIG','1','0','C_OBJNO','对象内容','objno',256,0,'S','0','0','','','','','','','','',null,'','DEFAULT','1');
+insert into TSVCINTERFACE(C_FUNCTIONNO,C_FLAG,C_PACKFLAG,C_FIELDNAME,C_EXPLAIN,C_PROPERTY,L_LEN,L_DECLEN,C_FIELDTYPE,C_FIELDFLAG,C_NOTNULL,C_CONDITION,C_EXISTVALUE,C_VIEWLEVEL,C_VIEWTYPE,C_DICNAME,C_ISDEFAULT,C_VALUE,C_MIDSEARCHNAME,L_NO,C_NOTSHOWALLITEM,C_BUSINFLAG,C_ISUSE)
+values('UC_SYSTEM_QUERYSECURITYCONFIG','1','0','C_OBJTYPE','对象类型','objtype',5,0,'S','0','0','','','','','','','','',null,'','DEFAULT','1');
+insert into TSVCINTERFACE(C_FUNCTIONNO,C_FLAG,C_PACKFLAG,C_FIELDNAME,C_EXPLAIN,C_PROPERTY,L_LEN,L_DECLEN,C_FIELDTYPE,C_FIELDFLAG,C_NOTNULL,C_CONDITION,C_EXISTVALUE,C_VIEWLEVEL,C_VIEWTYPE,C_DICNAME,C_ISDEFAULT,C_VALUE,C_MIDSEARCHNAME,L_NO,C_NOTSHOWALLITEM,C_BUSINFLAG,C_ISUSE)
+values('UC_SYSTEM_QUERYSECURITYCONFIG','1','0','C_TYPE','安全类型','type',64,0,'S','0','0','','','','','','','','',null,'','DEFAULT','1');
+
+DELETE TSVCVIEWCONFIG where c_functionno='UC_SYSTEM_QUERYSECURITYCONFIG';
+
+commit;
+
+http://updates.jenkins.io/current/update-center.json
+
+select a.* from HSI_RIGHT a where a.c_isuse='1' order by a.c_functionno
+
+select a.c_isuse,a.c_functionno from HSI_RIGHT a where a.c_isuse='1' order by a.c_functionno
+
+delete from HSI_RIGHT where c_functionno is null
+
+ALTER TABLE HSI_RIGHT ADD C_TXMANAGER VARCHAR2(44) DEFAULT '';
+
+select a.*,rowid from HSI_RIGHT a
+
+
+
+docker run -d --name jenkins -p 8080:8080 -v /mnt/hgfs/hs/jenkins:/var/jenkins_home jenkins/jenkins
+
+
+echo 'export MAVEN_HOME=/var/maven' >>/etc/profile
+
+echo 'export PATH=$MAVEN_HOME/bin:$PATH' >>/etc/profile
+
+
+echo 'export JAVA_HOME=/var/jdk1.8.0_231' >>/etc/profile
+
+echo 'export CLASSPATH=$:CLASSPATH:$JAVA_HOME/lib/' >>/etc/profile
+
+echo 'export PATH=$PATH:$JAVA_HOME/bin' >>/etc/profile
+
+
+docker exec -it jenkins /bin/bash
+
+
+-s /var/jenkins_home/setting/settings.xml install  -Dmaven.test.skip=true
+
+
+
+location /sonar {
+                proxy_pass http://127.0.0.1:9000;
+                }
+
+
+# 创建sonar数据库
+CREATE DATABASE `sonar` ;
+
+# 创建sonar用户
+CREATE USER 'sonar'@'%' IDENTIFIED BY 'sonar';
+
+# 为sonar用户赋予权限
+grant all on sonar.* to 'sonar'@'%';
+
+# 刷新权限，使权限生效
+FLUSH PRIVILEGES;
+
+
+
+adduser sonar
+chown -R sonar:sonar sonar
+
+
+一、Start Apache 2 Server /启动apache服务
+# /etc/init.d/apache2 start
+or
+$ sudo /etc/init.d/apache2 start
+二、 Restart Apache 2 Server /重启apache服务
+# /etc/init.d/apache2 restart
+or
+$ sudo /etc/init.d/apache2 restart
+三、Stop Apache 2 Server /停止apache服务
+# /etc/init.d/apache2 stop
+or
+$ sudo /etc/init.d/apache2 stop
+
+
+
+item = Jenkins.instance.getItemByFullName("your-job-name-here")
+//THIS WILL REMOVE ALL BUILD HISTORY
+item.builds.each() { build ->
+  build.delete()
+}
+item.updateNextBuildNumber(1)
+
+
+
+
+insert into TPR_REPORTPRINTCONFIG (C_FUNCTIONNO, C_RPTCODE, C_RPTNAME, C_RPTCLASS, C_RPTCLASSNAME, C_ISUSE, C_DESCRIBE, C_PRINTTYPE, C_SEALDIRCTION, C_SEALDIRCTION1, C_ORDER)
+values ('UCP_REPORT_NETVALUEOFFUNDASSETS', '08030002GF', '基金资产净值浏览表', '0803', '净值类', '1', '统计产品净值情况，包括基金名称、基金资产和负债总额、基金资产和单位净值、基金累计单位净值、实收基金、管理人、托管人等等信息', '2', '41048A08E09EC0E84825817D0005A402006', '41048A08E09EC0E84825817D0005A402001',  '301');
+
+
+
+/comController.go?execute&_UC=UCP_INFOS_PROCESSARCHIVE
+
+select * from tpb_sealworkflowinfo order by d_Createtime desc
+
+PENDING_PUSH("0","待推送"),
+PUSHED("1","已推送"),
+FAILURE_PUSH("2","推送失败");
+
+
+select t.*,rowid from tsysparameter t where c_item='S3KeepFileInfo'; -- 直销编码
+
+
+UCP_INFOS_PROCESSARCHIVE
+
+A4C241KZX7R3841T79E5,Mq5sunGHvcdkWurKIUGwDfyrOzjjMjSVkZ1Al65y,pisp,http://10.128.3.21:8080,http://10.2.117.166:80
+
+
+mv /var/lib/docker /data/docker
+  ln -s /data/docker /var/lib/docker
+
+  --graph=/data/docker
+
+
+docker run --name mysql  -p 3306:3306 -v /data/opt/mysql/conf.d:/etc/mysql/conf.d -v/data/opt/mysql/data:/var/lib/mysql -e MYSQL_ROOT_PASSWORD=daidai -d mysql
+-- root/daidai
+
+docker run --name postgres -v /data/opt/postgresql/:/home/data/ -e POSTGRES_PASSWORD=daidai -d -p 5432:5432 postgres
+
+docker run -d --name redis -p 6379:6379 -v /data/opt/redis/redis.conf:/etc/redis/redis.conf -v /data/opt/redis/data/:/data redis:latest /etc/redis/redis.conf --appendonly yes --requirepass "_dai_dai_"
+
