--- a/_posts/2019-08-18-NIO.md
+++ b/_posts/2019-08-18-NIO.md
@@ -489,3 +489,26 @@ JDK1.4提供的NIO框架，称为异步非阻塞I/O,但是严格按照UNIX网络
 之后对其做了性能上的优化，用epoll代替select/poll，上层API没有改变。NIO 2.0引入了新的异步通道，它是真正的异步I/O。
 
 
+#### 粘包、拆包
+
+##### 基于Netty处理粘包、拆包
+1. LineBasedFrameDecoder + StringDecoder 基于行来进行消息粘包拆包处理 其原理为：它依次遍历ByteBuf中的可读字节，判断是否有`\n` 或者`\r\n`，
+如果有，就以此为结束位置，从可读索引到此结束位置的字节组成一行，StringDecoder就是将接收到的对象转换成换行符，然后继续调用前面的Handler。
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+##### Kubernetes
+Kubernetes是一个完备的分布式系统支撑平台
