--- a/_posts/2017-05-23-JavaScript-12.md
+++ b/_posts/2017-05-23-JavaScript-12.md
@@ -353,11 +353,11 @@ Person.prototype.sayName = function () {
 function objectFactory() {
 
     var obj = new Object(),
-
+    // 获取构造函数
     Constructor = [].shift.call(arguments);
 
     obj.__proto__ = Constructor.prototype;
-
+    // 绑定this
     Constructor.apply(obj, arguments);
 
     return obj;
