--- a/_posts/2017-05-23-JavaScript-12.md
+++ b/_posts/2017-05-23-JavaScript-12.md
@@ -449,6 +449,16 @@ function objectFactory() {
 };
 ```
 
+##### 事件
+```
+// event：指定事件名； function：指定要事件触发时执行的函数；useCapture：布尔值，指定事件是否在捕获或冒泡阶段执行。
+//（true- 事件句柄在捕获阶段执行。默认false）
+// addEventListener() 方法为元素附加事件处理程序而不会覆盖已有的事件处理程序。(添加几次 就会有几个事件)
+element.addEventListener(event, function, useCapture);
+
+对于if判断 非0为true
+```
+
 ## 相关链接
 
 [《JavaScript深入之从原型到原型链》](https://github.com/mqyqingfeng/Blog/issues/2)
@@ -465,3 +475,7 @@ JavaScript深入系列目录地址：[https://github.com/mqyqingfeng/Blog](https
 JavaScript深入系列预计写十五篇左右，旨在帮大家捋顺JavaScript底层知识，重点讲解如原型、作用域、执行上下文、变量对象、this、闭包、按值传递、call、apply、bind、new、继承等难点概念。
 
 如果有错误或者不严谨的地方，请务必给予指正，十分感谢。如果喜欢或者有所启发，欢迎star，对作者也是一种鼓励。
+
+
+
+##### 
