--- a/_posts/2019-12-31-Nginx.md
+++ b/_posts/2019-12-31-Nginx.md
@@ -179,6 +179,24 @@ http {
 
 每一个http块可以包含多个server块，每个server块就相当于一台虚拟主机。
 
+##### location 指令说明，该语法用来匹配 url，语法：
+```
+location[ = | ~ | ~* | ^~] url{
+}
+```
+* = 用于不含正则表达式的 url 前，要求字符串与 url 严格匹配，匹配成功就停止向下搜索并处理请求。
+* ~ 用于表示 url 包含正则表达式，并且区分大小写。
+* ~* 用于表示 url 包含正则表达式，并且不区分大小写。
+* ^~ Nginx 服务器找到表示 url 和字符串匹配度最高的 location 后，立即使用此 location 处理请求，而不再匹配。
+* 如果有 url 包含正则表达式，不需要有 ~ 开头标识
+
+##### Nginx 高可用
+```
+# 1. 安装 Keepalived
+yum install keepalived -y
+
+```
+
 ##### 设置是否允许同事接收多个网络连接
 每一个nginx服务器的worker process 都有能力同时接收多个新的网络连接，这需要在配置文件中进行配置，器指令为multi_accept,该指令 只能在 events块中配置。
 ```
