--- a/_posts/2019-12-19-线程池.md
+++ b/_posts/2019-12-19-线程池.md
@@ -109,6 +109,23 @@ Runnable接口中的run()方法的返回值是void，它做的事情只是纯粹
 
 Callable接口中的call()方法是有返回值的，是一个泛型，和Future、FutureTask配合可以用来获取异步执行的结果。
 
+runnable 和 callable接口都是对任务处理逻辑的抽象，即无需要关心具体处理逻辑，其处理逻辑展示为Runnable.run()和Callable.call()。
+
+Runnable实例，其优点是可以交给一个专门的工作者线程或者线程池，或Executor的其他实现类来执行；缺点就是无法直接获取到执行结果。
+
+callable实例，可以通过ThreadPoolExecutor.submit(Callable)的返回值老获取任务的处理结果，缺点是只能交给线程池执行
+
+
+java.util.concurrent.Executor是对任务的执行进行抽象，其接口`void execute(Runnable command)` command代表要执行的任务。
+
+ExecutorService接口继续Executor接口，提供了几个submit 方法，可以接受Runnable或者Callable所表示的任务，并且返回相应的Future实例。
+
+ThreadPoolExecutor是ExecutorService接口的默认实现类。实用工具类Executors
+
+异步任务批量执行：CompletionService接口，它整合了Executor和BlockingQueue的功能，可以更加方便在多个任务执行时获取到任务执行结果。
+
+
+
 ##### 线程状态
 线程通常都有五种状态，创建、就绪、运行、阻塞和死亡。
 * 创建状态。在生成线程对象，并没有调用该对象的start方法，这是线程处于创建状态。
