--- a/_posts/2017-05-23-pandoc.markdown
+++ b/_posts/2017-05-23-pandoc.markdown
@@ -73,7 +73,15 @@ html** 表示输出文件格式为HTML。
 ### **Markdown转html**
 
 **pandoc README.md -o README.html**
-
+```
+pandoc code.text -s --highlight-style pygments -o example18a.html
+pandoc code.text -s --highlight-style kate -o example18b.html
+pandoc code.text -s --highlight-style monochrome -o example18c.html
+pandoc code.text -s --highlight-style espresso -o example18d.html
+pandoc code.text -s --highlight-style haddock -o example18e.html
+pandoc code.text -s --highlight-style tango -o example18f.html
+pandoc code.text -s --highlight-style zenburn -o example18g.html
+```
 ### **Markdown转word**
 
 **pandoc README.md -o README.docx**
